--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/src/main/resources/templates/index.html
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/src/main/resources/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
     <link data-th-href="@{/css/main.css?{id}(id=${timestamp})}" rel="stylesheet">
-    <title>CI/CD Master Class By Abhishek Veeramalla</title>
+    <title>CI/CD This is vinod vulavakayala</title>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Ultimate CI/CD Pipeline using Java</div></a>
+    <a class="navbar-brand" href="#">Using jenkins to buidl springboot, scan the code using sonarqube, package code using docker, deploy the docker image using argo cd</div></a>
 </nav>
 
 <main role="main" class="container">
